--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/img/logo.png.png" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -14,13 +14,32 @@
         <link rel="stylesheet" href="">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title> Munyaradzi Chigangawa Portfolio Website </title>
+        <title> Munyaradzi Chigangawa Portfolio </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
+            <nav class  = "nav-container">
+                <a href="#" class= "nav__logo"> MC </a>
+                <div class = "nav__menu">
+                    <ul class = "nav__list">
+                        <li class = "nav__item">
+                            <a href="#home" class = "nav__link"> <i class='bx bx-home-alt'></i> </a>
+                        </li>
+                        <li class = "nav__item">
+                            <a href="#about" class = "nav__link"> <i class='bx bx-user'></i> </a>
+                        </li>
+                        <li class = "nav__item">
+                            <a href="#skills" class = "nav__link"> <i class='bx bx-book'></i> </a>
+                        </li>
+                        <li class = "nav__item">
+                            <a href="#work" class = "nav__link"> <i class='bx bx-briefcase-alt-2' ></i> </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             
         </header>
 
@@ -68,7 +87,7 @@
         </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src="assets/js/main.js"></script>
+        <script src=""></script>
 
         <!--=============== SWIPER JS ===============-->
         <script src=""></script>
@@ -77,6 +96,6 @@
         <script src=""></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src=""></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
