--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
                         <li class = "nav__item">
                             <a href="#work" class = "nav__link"> <i class='bx bx-briefcase-alt-2' ></i> </a>
                         </li>
+                        <li class = "nav__item">
+                            <a href="#contact" class = "nav__link"> <i class='bx bx-message-square-minus'></i> </a>
+                        </li>
                     </ul>
                 </div>
+                <!-- Theme Change Button -->
+                        <i class = "bx bx-moon change-theme" id = 'theme-button'></i>
             </nav>
             
         </header>
